# diaryx-core

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  flake.nix  install.sh  previous_session.md  release.toml  result  roadmap.md  test.md
.agent/rules/: diaryx-cli.md  general-rules.md
.claude/skills/diaryx-cli/: SKILL.md
.github/workflows/: ci.yml  cli-release.yml  pages.yml  release.yml  tauri-release.yml
apps/: README.md
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  main.rs
apps/desktop/src/lib/: Editor.svelte  types.ts
apps/tauri/: .gitignore  README.md  index.html  package.json  vite.config.ts
apps/tauri/src/: App.svelte  main.ts
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/src/: commands.rs  commands_sync.rs  lib.rs  main.rs  websocket_sync.rs
apps/tauri/src-tauri/src/cloud/: google_drive.rs  mod.rs  s3.rs
apps/tauri/src-tauri/src/sync/: mod.rs  websocket_provider.rs
apps/tauri/src/lib/: api.ts  sync.ts
apps/web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/docs/: tiptap-custom-extensions.md
apps/web/e2e/: attachments.spec.ts  editor.spec.ts  fixtures.ts  share.spec.ts  sync-v2.spec.ts  workspace.spec.ts
apps/web/src/: App.svelte  main.ts
apps/web/src/controllers/: entryController.ts  index.ts  workspaceController.ts
apps/web/src/lib/: CommandPalette.svelte  Editor.svelte  ExportDialog.svelte  LeftSidebar.svelte  NewEntryModal.svelte  RightSidebar.svelte  SettingsDialog.svelte  Sidebar.svelte  SyncSetupWizard.svelte  SyncStatusIndicator.svelte  collaborationUtils.ts  credentials.ts  wasm-stub.js  workspaceCrdt.ts
apps/web/src/lib/auth/: authService.ts  authStore.svelte.ts  index.ts
apps/web/src/lib/backend/: api.test.ts  api.ts  index.ts  interface.ts  storageType.ts  tauri.ts  wasm.ts  wasmWorkerNew.ts  workerBackendNew.ts
apps/web/src/lib/components/: AttachmentPicker.svelte  AttachmentPicker.test.ts  AttachmentPickerNodeView.svelte  FloatingMenuComponent.svelte  InlineToolbar.svelte  TemplateEditorDialog.svelte
apps/web/src/lib/crdt/: bodySyncBridge.ts  index.ts  (+16 more)
apps/web/src/test/: setup.ts
crates/: LICENSE.md  README.md
crates/diaryx/: Cargo.toml  README.md  build.rs
crates/diaryx/src/: main.rs
crates/diaryx/src/cli/: README.md  args.rs  attachment.rs  config.rs  content.rs  entry.rs  export.rs  mod.rs  normalize.rs  property.rs  publish.rs  search.rs  sort.rs  template.rs  util.rs  workspace.rs
crates/diaryx/src/cli/nav/: README.md  app.rs  commands.rs  keys.rs  mod.rs  state.rs  tree.rs  ui.rs
crates/diaryx/src/cli/sync/: auth.rs  client.rs  mod.rs  progress.rs  status.rs
crates/diaryx_cli/: Cargo.toml  README.md
crates/diaryx_cli/src/: editor.rs  main.rs
crates/diaryx_cli/src/cli/: args.rs  content.rs  entry.rs  mod.rs  property.rs  search.rs  sort.rs  template.rs  util.rs  workspace.rs
crates/diaryx_core/: Cargo.toml  README.md  build.rs
crates/diaryx_core/bindings/bindings/: BinaryExportFile.ts  ChangeType.ts  Command.ts  CrdtHistoryEntry.ts  CreateChildResult.ts  CreateEntryOptions.ts  ExcludedFile.ts  ExportFile.ts  ExportPlan.ts  ExportedFile.ts  FileDiff.ts  FileMetadata.ts  FileSearchResult.ts  FileSystemEvent.ts  FixResult.ts  GuestConfig.ts  HistoryEntry.ts  LinkFormat.ts  Response.ts  SearchOptions.ts  StorageInfo.ts  TemplateInfo.ts  ValidationResult.ts  ValidationWarning.ts  ValidationWarningWithMeta.ts  WorkspaceConfig.ts
crates/diaryx_core/src/: backup.rs  command.rs  command_handler.rs  config.rs  date.rs  diaryx.rs  editor.rs  entry.rs  error.rs  export.rs  frontmatter.rs  fs.rs  lib.rs  link_parser.rs  main.rs  metadata_writer.rs  pandoc.rs  path_utils.rs  publish.rs  search.rs  sync_crdt.rs  template.rs  test_utils.rs  validate.rs  workspace.rs
crates/diaryx_core/src/cli/: export.rs  mod.rs  normalize.rs  publish.rs  workspace.rs
crates/diaryx_core/src/cloud/: README.md  conflict.rs  engine.rs  mod.rs
crates/diaryx_core/src/crdt/: README.md  body_doc.rs  body_doc_manager.rs  history.rs  memory_storage.rs  mod.rs  sqlite_storage.rs  storage.rs  sync.rs  sync_handler.rs  sync_manager.rs  types.rs  workspace_doc.rs
crates/diaryx_core/src/entry/: mod.rs
crates/diaryx_core/src/fs/: async_fs.rs  callback_registry.rs  crdt_fs.rs  decorator_stack.rs  event_fs.rs  events.rs  mod.rs  native.rs
crates/diaryx_core/src/publish/: mod.rs
crates/diaryx_core/src/sync/: change.rs  conflict.rs  engine.rs  manifest.rs  mod.rs
crates/diaryx_core/src/utils/: date.rs  mod.rs
crates/diaryx_core/src/workspace/: mod.rs  types.rs
crates/diaryx_core/tests/: sync_integration_test.rs
crates/diaryx_sync_server/: Cargo.toml  README.md
crates/diaryx_sync_server/src/: config.rs  lib.rs  main.rs
crates/diaryx_sync_server/src/auth/: magic_link.rs  middleware.rs  mod.rs
crates/diaryx_sync_server/src/db/: mod.rs  repo.rs  schema.rs
crates/diaryx_sync_server/src/email/: mod.rs
crates/diaryx_sync_server/src/handlers/: api.rs  auth.rs  mod.rs  sessions.rs  ws.rs
crates/diaryx_sync_server/src/sync/: connection.rs  mod.rs  room.rs
crates/diaryx_sync_server/src/sync_v2/: hooks.rs
crates/diaryx_wasm/: Cargo.toml  README.md
crates/diaryx_wasm/src/: async_export.rs  async_filesystem.rs  async_search.rs  async_validation.rs  async_workspace.rs  attachment.rs  backend.rs  entry.rs  export.rs  frontmatter.rs  fsa_fs.rs  indexeddb_fs.rs  js_async_fs.rs  lib.rs  opfs_fs.rs  search.rs  state.rs  validation.rs  wasm_sqlite_storage.rs  workspace.rs
scripts/: scripts.md  sync-versions.sh  update-agents-index.sh
src/: app.rs  cli.rs  config.rs  editor.rs  entry.rs  error.rs  export.rs  fs.rs  lib.rs  main.rs  model.rs  publish.rs  search.rs  workspace.rs
src/cli/: args.rs  content.rs  entry.rs  mod.rs  property.rs  publish.rs  search.rs  util.rs  workspace.rs
(+53 files in other folders)
