[workspace]
resolver = "2"
members = [
    "crates/diaryx_core",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.3.3"
edition = "2021"
license = "PolyForm Shield License 1.0.0"
repository = "https://github.com/diaryx-org/diaryx-core"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
diaryx_core = { path = "crates/diaryx_core" }
