[package]
name = "diaryx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
description = "Command-line interface for Diaryx journal management"
keywords = ["diary", "journal", "markdown", "frontmatter", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "diaryx"
path = "src/main.rs"

[dependencies]
diaryx_core = { workspace = true, features = ["markdown", "crdt", "crdt-sqlite"] }
clap = { version = "4.5", features = ["derive"] }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
indexmap.workspace = true
dirs = "6.0"
glob = "0.3"
pathdiff = "0.2"
futures-lite = "2.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
url = "2.5"
urlencoding = "2.1"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"

[package.metadata.release]
# This crate should be published to crates.io
publish = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/diaryx-{ target }.{ archive-format }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
