[package]
name = "diaryx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
description = "Command-line interface for Diaryx journal management"
keywords = ["diary", "journal", "markdown", "frontmatter", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "diaryx"
path = "src/main.rs"

[dependencies]
diaryx_core = { workspace = true, features = ["markdown"] }
clap = { version = "4.5", features = ["derive"] }
chrono.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
indexmap.workspace = true
dirs = "6.0"
glob = "0.3"
pathdiff = "0.2"

[package.metadata.release]
# This crate should be published to crates.io
publish = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/diaryx-{ target }.{ archive-format }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
