[package]
name = "diaryx_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
description = "Core library for Diaryx - a tool to manage markdown files with YAML frontmatter"
keywords = ["diary", "journal", "markdown", "frontmatter"]
categories = ["text-processing"]

[dependencies]
chrono.workspace = true
chrono-english = "0.1"
indexmap.workspace = true
pathdiff = "0.2"
serde.workspace = true
serde_yaml.workspace = true
toml = "0.9.8"
thiserror.workspace = true

# Optional dependencies
comrak = { version = "0.49", optional = true }

# CRDT support for live sync
automerge = { version = "0.7", optional = true }

# Native-only dependencies (not available in WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6.0"
glob = "0.3"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Add wasm-bindgen when we need JS interop
# wasm-bindgen = "0.2"

[features]
# Enable markdown-to-HTML conversion (for publish feature)
markdown = ["dep:comrak"]

# Enable live sync with automerge CRDT
live-sync = ["dep:automerge"]

# Default features for the library
default = []

[package.metadata.release]
# This crate should be published to crates.io
publish = true

[dev-dependencies]
tempfile = "3"
