[package]
name = "diaryx_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
description = "Core library for Diaryx - a tool to manage markdown files with YAML frontmatter"
keywords = ["diary", "journal", "markdown", "frontmatter"]
categories = ["text-processing"]

[dependencies]
base64 = "0.22"
chrono.workspace = true
chrono-english = "0.1"
indexmap.workspace = true
pathdiff = "0.2"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml = "0.9.8"
thiserror.workspace = true

# CRDT support
yrs = { version = "0.25", optional = true }
y-sync = { version = "0.4", optional = true }

# TypeScript bindings generation
ts-rs = { version = "10", features = ["serde-json-impl", "indexmap-impl"] }

# Used by non-WASM sync wrappers (block_on) during the async-first refactor.
# On WASM, the sync wrappers are cfg-gated off.
futures-lite = "2"

# Optional dependencies
comrak = { version = "0.49", optional = true }

# Native-only dependencies (not available in WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6.0"
glob = "0.3"
rusqlite = { version = "0.34", features = ["bundled"], optional = true }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Add wasm-bindgen when we need JS interop
# wasm-bindgen = "0.2"

[features]
# Enable markdown-to-HTML conversion (for publish feature)
markdown = ["dep:comrak"]

# Enable CRDT-based sync and version history
crdt = ["dep:yrs", "dep:y-sync", "dep:rusqlite"]

# Placeholder feature for workspace crates that currently enable it.
live-sync = []

# Default features for the library
default = []

[package.metadata.release]
# This crate should be published to crates.io
publish = true

[dev-dependencies]
tempfile = "3"
