[package]
name = "diaryx_sync_server"
description = "Multi-device sync server for Diaryx with magic link authentication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
license-file.workspace = true

[dependencies]
# Internal crate
diaryx_core = { workspace = true, features = ["crdt", "crdt-sqlite"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.34", features = ["bundled"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Email
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "pool"] }

# Utilities
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
futures = "0.3"
tokio-tungstenite = "0.26"

# Y-sync v2 (siphonophore-based)
siphonophore = { path = "../../../siphonophore" }
kameo = "0.19"
async-trait = "0.1"

# Environment
dotenvy = "0.15"

[build-dependencies]
diaryx_core = { path = "../diaryx_core" }

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.26"
