[package]
name = "diaryx_wasm"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "WebAssembly bindings for Diaryx core functionality"
license-file.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = ["console_error_panic_hook"]

[dependencies]
diaryx_core = { path = "../diaryx_core" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
regex = "1.10"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "wasmbind"] }
pathdiff = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
