[package]
name = "Diaryx"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Tauri application for Diaryx journal management (desktop and mobile)"
publish = false

[lib]
name = "diaryx_lib" # Optional, but good practice. Defaults to package name if omitted.
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
diaryx_core = { workspace = true, features = ["markdown"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
