[package]
name = "diaryx_tauri"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Tauri application for Diaryx journal management (desktop and mobile)"
publish = false

[lib]
name = "diaryx_tauri_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
diaryx_core = { workspace = true, features = ["markdown"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
log = "0.4"
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
