[package]
name = "diaryx_tauri"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Tauri application for Diaryx journal management (desktop and mobile)"
publish = false

[lib]
name = "diaryx_tauri_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
diaryx_core = { workspace = true, features = ["markdown", "live-sync", "crdt", "crdt-sqlite", "native-sync", "native-pandoc"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
chrono = "0.4"
pathdiff = "0.2"

# Cloud backup (S3)
aws-sdk-s3 = "1"
aws-config = "1"
aws-smithy-types = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
uuid = { version = "1", features = ["v4"] }
bytes = "1"
futures = "0.3"
tauri-plugin-stronghold = "2.3.1"
rust-argon2 = "3.0.0"

# Cloud backup (Google Drive)
tauri-plugin-google-auth = "0.3"
reqwest = { version = "0.12", features = ["json", "multipart"] }
dotenvy = "0.15"

# Live sync (WebSocket transport)
tokio-tungstenite = "0.23"
futures-util = "0.3"
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
